include/flowi/heap/heap.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

// The `fl_heap_*` plugin service API - flowi core's malloc-family heap allocator (mimalloc, or the
// system allocator when sanitizers are enabled or on Windows), exported as plain C symbols. This is
// the individually-owned counterpart to the arena service: every allocation must be released, and the
// two are not interchangeable. Plugins wrapping an external C library typically hand these slots to it
// as its allocator callbacks. Plugins link the shared library and call these symbols directly.
//
// Allocator statistics are not part of this surface - fl_memory_tracker_get_stats already reports
// mimalloc's allocated/freed totals alongside the arena ones.
// Direct API - hand-written bodies.
// Allocate size bytes. Returns null on failure.
FL_API void* heap_alloc(uint64_t size);
// Allocate count * size zero-initialized bytes. Returns null on failure.
FL_API void* heap_calloc(uint64_t count, uint64_t size);
// Resize an allocation (ptr may be null). The original pointer may be invalidated - always use
// the returned one.
FL_API void* heap_realloc(void* ptr, uint64_t new_size);
// Release an allocation from heap_alloc / heap_calloc / heap_realloc (null is a no-op).
FL_API void heap_free(void* ptr);
// Allocate size bytes on an alignment-byte boundary (alignment must be a power of two).
FL_API void* heap_alloc_aligned(uint64_t alignment, uint64_t size);
// Release an allocation from heap_alloc_aligned (null is a no-op).
FL_API void heap_free_aligned(void* ptr);
// Usable size of an allocation, which may exceed the requested size. Zero when the allocator in
// use cannot report it.
FL_API uint64_t heap_usable_size(void* ptr);


#ifdef __cplusplus
}
#endif