rust/flowi_core_sys/src/generated/heap.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

// The `fl_heap_*` plugin service API - flowi core's malloc-family heap allocator (mimalloc, or the
// system allocator when sanitizers are enabled or on Windows), exported as plain C symbols. This is
// the individually-owned counterpart to the arena service: every allocation must be released, and the
// two are not interchangeable. Plugins wrapping an external C library typically hand these slots to it
// as its allocator callbacks. Plugins link the shared library and call these symbols directly.
//
// Allocator statistics are not part of this surface - fl_memory_tracker_get_stats already reports
// mimalloc's allocated/freed totals alongside the arena ones.
extern "C" {
    /// Allocate size bytes. Returns null on failure.
    pub fn heap_alloc(size: u64) -> *mut core::ffi::c_void;
    /// Allocate count * size zero-initialized bytes. Returns null on failure.
    pub fn heap_calloc(count: u64, size: u64) -> *mut core::ffi::c_void;
    /// Resize an allocation (ptr may be null). The original pointer may be invalidated - always use
    /// the returned one.
    pub fn heap_realloc(ptr: *mut core::ffi::c_void, new_size: u64) -> *mut core::ffi::c_void;
    /// Release an allocation from heap_alloc / heap_calloc / heap_realloc (null is a no-op).
    pub fn heap_free(ptr: *mut core::ffi::c_void);
    /// Allocate size bytes on an alignment-byte boundary (alignment must be a power of two).
    pub fn heap_alloc_aligned(alignment: u64, size: u64) -> *mut core::ffi::c_void;
    /// Release an allocation from heap_alloc_aligned (null is a no-op).
    pub fn heap_free_aligned(ptr: *mut core::ffi::c_void);
    /// Usable size of an allocation, which may exceed the requested size. Zero when the allocator in
    /// use cannot report it.
    pub fn heap_usable_size(ptr: *mut core::ffi::c_void) -> u64;
}

